update docker project basics